Fix alignment

--- a/app/assets/css/modules/playground.scss
+++ b/app/assets/css/modules/playground.scss
@@ -14,6 +14,7 @@ main.playground
     width: 100%;
     height: 100%;
     display: block;
+    font-size: 0;
     position: relative;
 
     section.bio
